ensure header content is not hard edge on small screens

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -54,7 +54,7 @@ a {
   display: flex;
   align-items: center;
   gap: 1em;
-  padding: 1em 0 0.5em;
+  padding: 1em 1em 0.5em;
     
   .SiteLogo {
     width: 7em;
